# overlord

./: .gitignore  .gitmodules  README.md  data.lnk  main.py  package-lock.json  package.json  pylock.toml  pyproject.toml  requirements.txt
data/: standard_hooks.json
scripts/: freshstart.sh  quickstart.sh  stat.sh  update.sh
scripts/dev_tools/: autoversion.py  status.sh
src/: overlord-ftp.py  overlord_ftp.py  overlord_sql.py  testrun.py
src/overlord/: __init__.py  document.py  module.py  service.py  test.py
src/overlord/core/: StandardHooks.json  __init__.py  config.py  constructor.py  defaultConfig.json  getArguments.py  inject.py  memorial.py  package.py  route.py  standard_githook_hash.json
src/overlord/services/ftpagent/: overlord_ftp.py
src/overlord/services/mysqlagent/: overlord_sql.py
src/overlord/toolset/: git.py  toml.py
