[tool.poetry]
name = "overlord"
version = "0.1.0"
description = "like zerg infection it reaches all parts of space with it's organic behaviour"
authors = ["Sett Sarverott <sarverott@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
podman = "^5.4.0.1"
paramiko = "^3.5.1"
gitpython = "^3.1.44"
pyyaml = "^6.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
