[project]
authors = [
  {name = "Sett Sarverott", email = "sett@sarverott.com"},
]

description = "like zerg infection it reaches all parts of space with it's organic behaviour"
keywords = ["dark", "darkness", "memory"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Sett Sarverott", email = "sett@sarverott.com"},
]
name = "overlord"
readme = "README.md"
requires-python = ">=3.11"
version = "0.2.0"
dependencies = [
    "bcrypt==4.2.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "chromadb",
    "cproto==0.7.2",
    "crewai",
    "cryptography==44.0.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "idna==3.10",
    "langchain",
    "langfuse",
    "langgraph",
    "mcp[cli]",
    "memlayer",
    "ollama",
    "openai",
    "paramiko==3.5.1",
    "podman==5.4.0.1",
    "poetry>=2.2.1",
    "pycparser==2.22",
    "pynacl==1.5.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "smmap==5.0.2",
    "urllib3==2.3.0",
    "websocket-client==1.8.0",
]

[project.urls]
Homepage = "https://github.com/sarverott/overlord"
Issues = "https://github.com/sarverott/overlord/issues"


[tool.poetry]
name = "overlord"
version = "0.1.0"
description = "like zerg infection it reaches all parts of space with it's organic behaviour"
authors = ["Sett Sarverott <sarverott@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
podman = "^5.4.0.1"
paramiko = "^3.5.1"
gitpython = "^3.1.44"
pyyaml = "^6.0.2"
requests = "^2.32.3"
darkpoint = "^0.2.0"
go-task-bin = "^3.44.1"

